@@ -1,10 +1,9 @@
 package com.Dandelion.Learn;
-
+import java.lang.String;
 public class TestWrappedClass {
     public static void main(String[] args) {
         Integer a = 3;
-        Integer b = Integer.valueOf(30);
-        Integer e = new Integer("9999");
+        Integer e = Integer.valueOf("9999");
+        System.out.println(a+e);
     }
 }
-class a extends RuntimeException{}
